# BillBox

./: .gitignore  LICENSE  README.md  requirements.txt  setup.py
docker/: Dockerfile.dev
src/backend/: main.py
src/backend/routers/: invoice.py
src/cpp/: CMakeLists.txt
src/cpp/cmake/: FindLeptonica.cmake  FindTesseract.cmake
src/cpp/include/: image_preprocessor.h  ocr_processor.h
src/cpp/src/: image_preprocessor.cpp  ocr_processor.cpp  python_binding.cpp
src/cpp/tests/: test_ocr.cpp
src/desktop/: package.json
src/web/: package-lock.json  package.json  tailwind.config.ts
src/web/app/: globals.css  layout.tsx  page.tsx
src/web/app/invoices/: page.tsx
src/web/app/upload/: page.tsx
src/web/components/: Footer.tsx  InvoiceList.tsx  InvoiceUploader.tsx  Navbar.tsx
src/web/components/landing/: CTA.tsx  Hero.tsx  HowItWorks.tsx
src/web/public/: manifest.json
src/web/scripts/: generate-logos.ts
src/web/utils/: api.ts
